migrate controllers tests to use MockMvc with jwt